src/assets/docs.scss
/**
*   @author ScanPay ApS.
**/

@font-face {
    font-family: 'B';
    font-weight: 700;
    src: url('font/B700.woff2') format('woff2'), url('font/B700.woff') format('woff');
}

@font-face {
    font-family: 'N';
    src: url('font/N400.woff2') format('woff2'), url('font/N400.woff') format('woff');
}

@font-face {
    font-family: 'N';
    font-weight: 600;
    src: url('font/N600.woff2') format('woff2'), url('font/N600.woff') format('woff');
}

@font-face {
    font-family: 'N';
    font-style: italic;
    src: url('font/N400i.woff2') format('woff2'), url('font/N400i.woff') format('woff');
}

body {
    display: flex;
    background: #f0f0f0;
    min-height: 100vh;
    margin: 0;
    font: 15px/1.54 'N', sans-serif;
    color: #444;
    -ms-text-size-adjust: 100%; // Prevent adjust after orientation change.
    -webkit-text-size-adjust: 100%; // Prevent adjust after orientation change.
    box-sizing: border-box;
}

a {
    color: #3074af;
    text-decoration: none;

    &:active {
        outline: 0;
    }
    &:hover {
        outline: 0;
        text-decoration: underline;
    }
}

p {
    padding: 0;
    margin: .7em 0;
}

sup, sub {
  vertical-align: baseline;
  position: relative;
  top: -.5em;
  font-size: .8em;
}

b, strong { font-weight: 600; }

h1, h2, h3, h4 {
    font: 700 15px / normal 'B', serif;
    margin: 1.4em 0 0.6em;
    color: #404040;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

h1 {
    font-size: 1.85em;
    margin: 1.4em 0 .8em;
}

h2 {
    font-size: 1.5em;
    margin: 1.4em 0 .6em;
}

h3 {
    font-size: 1.15em;
}

h4 {
    font-size: 1.2em;
}

.hlink {
    display: inline-block;
    position: absolute;
    margin: 0 0 0 8px;
}

.rel {
    position: relative;
}

/*
    Sidebar
*/

.sidebar-- {
    position: relative;
    background: #343131;
    width: 23%;
    min-width: 210px;
    max-width: 290px;
}

.sidebar--head {
    position: absolute;
    position: -webkit-sticky;
    position: -ms-sticky;
    position: sticky;
    top: 0;
    padding: 16px 10.5% 0 9.5%;
    height: 93px;
    width: 80%;
    background: #2980b9;
    text-align: center;
}

.sidebar--logo {
    height: 38px;
}

.sidebar--home {
    display: inline-block;
    padding: 2px 6px 3px;
    font-size: 16px;
    font-weight: 600;
    color: #fcfcfc;
    margin-left: -3px;
    border-radius: 2px;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    > svg {
        vertical-align: -1px;
    }

    &:hover {
        background: #388abf;
        color: #fcfcfc;
        text-decoration: none;
    }
}

.sidebar--search {
    display: block;
    width: 100%;
    box-sizing: border-box;
    border-radius: 20px;
    font-size: 13px;
    padding: 6px 12px;
    border: 1px solid #216694;
    outline: none;
}

.sidebar--ul {
    position: absolute;
    position: -webkit-sticky;
    position: -ms-sticky;
    position: sticky;
    width: 100%;
    top: 120px;
    padding: 0;
    margin: 0;
    line-height: 1.55;
    list-style: none;

    > li {
        color: #b3b3b3;
        position: relative;

        > a {
            display: block;
            color: #b3b3b3;
            padding: 5.5px 24px;
            text-decoration: none;
        }

        &:hover {
            background: #4e4a4a;
            text-decoration: none;
        }
    }
}

.sidebar--sub {
    list-style: none;
    background: #e3e3e3;
    padding: 0;
    margin-bottom: 3px;
    border-right: solid 1px #c9c9c9;

    a {
        display: block;
        color: #6b6a6a;
        padding: 3.5px 33px;
        text-decoration: none;
    }
    li:hover {
        background: #d6d6d6;
    }
    li:last-child {
        padding-bottom: 4px;
    }
}

.sidebar--label {
    display: inline-block;
    font-size: 0.7em;
    color: #088608;
    border: 1px solid #088608;
    vertical-align: 1px;
    line-height: 14px;
    border-radius: 3px;
    padding: 0 4px;
    margin: 0 0 0 7px;
}

.sidebar--fold {
    position: absolute;
    left: 9px;
    margin-top: 13px;
}

.sidebar--active {
    background: #fdfdfd !important;
    color: #404040;

    > a {
        color: #404040 !important;
        border-bottom: solid 1px #c9c9c9;
        position: relative;
    }
}

main {
    position: relative;
    display: flex;
    flex: 1;
    flex-shrink: 1;
    flex-direction: column;
    background: #fdfdfd;
    max-width: 900px;
}

article {
    flex: 2;
    margin: 0 8% 0;
    position: relative;
    padding-bottom: 9em;
}

.header {
    margin: 0 8% 0;
    height: 50px;
    padding-top: 32px;
    border-bottom: 1px solid #e1e4e5;
}

.footer {
    position: absolute;
    bottom: 25px;
    left: 0;
    right: 0;
    padding-top: 22px;
    color: #888;
    border-top: 1px solid #e1e4e5;
    font-size: 14px;
}

.raquo {
    margin: 0 4px;
}

.git {
    float: right;
}

.git--logo {
    display: inline-block;
    vertical-align: -2px;
    margin-right: 1px;
}

.note-- {
    margin: 21px 0 15px 0;
}

.note--head {
    background: #6ab0de;
    color: #fff;
    font-weight: 600;
    padding: 2px 15px;
    font-size: 15px;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.note--ico {
    float: left;
    margin: 4px 5px 0 0;
}

.note--body {
    background: #e7f2fa;
    padding: 10px 12px 12px 12px;
    font-size: 14.5px;
    color: #3d4a52;
}

small {
    font-size: 0.9em;
}

.bashcmd, .pcode, .code--code {
    display: block;
    padding: 8px;
    font: 13px/19px DejaVu Sans Mono, Consolas, monospace;
    color: #252525;
    background: #f9f9f9;
    white-space: pre-wrap;
    word-break: break-all;
    word-wrap: break-word;
}

.bashcmd {
    margin: 20px 0;
    background: #f4f4f4;
    border-radius: 3px;

    &:before {
        content: '$ ';
        color: #999;
    }
}

.pcode {
    position: relative;
    margin: 21px 0;
    border-radius: 3px;
    border: 1px solid #dcdcdc;
}

.code {
    display: inline-block;
    font: 13px/19px DejaVu Sans Mono, Consolas, monospace;
    color: #bd143e;
    border: solid 1px #e1e4e5;
    padding: 0 4px;
    border-radius: 3px;
}

.authheader {
    display: block;
    max-width: 520px;
    margin-bottom: -1em;
}

.tablecode {
    width: 50%;
    max-width: 26em;
    font-size: 13px;
    padding-left: 12px;
    font-family: DejaVu Sans Mono, Consolas, monospace;
    color: #444;
    word-break: break-all;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;

    > pre {
        background: none;
        font: inherit;
        border: 0;
        padding: 0;
        margin: 0;
    }
}

.nobr {
    overflow: hidden;
    white-space: pre;
    text-overflow: ellipsis;
}


.code-- {
    margin: 21px 0 0;
    border: 1px solid #e3e3e3;

    > pre {
        margin: 0;
        border-top: 1px solid #e3e3e3;
    }

    > button:first-child {
        margin-left: 12px;
    }
}

.code--active {
    border-bottom: 2px solid #1c83c7;
}

button {
    background: none;
    cursor: pointer;
    border: 0;
    margin: 0;

    &:focus {
        outline: none;
    }
    &::-moz-focus-inner {
        border: 0;
        padding: 0; // Remove inner padding and border in Firefox 4+ (normalize)
    }
}

.code-- > button {
    padding: 2px 6px 0;
    margin: 0 5px -1px;
    font: 600 14px / 40px 'N', sans-serif;
    height: 43px;
    color: #757575;
}

/*
Tables
*/

table {
    border-spacing: 0;
    border-collapse: collapse;
    empty-cells: show;
    width: 100%;
    border: 1px solid #d5d5d5;
    margin: 22px 0 26px;
    font-size: 13.5px;
}

.table--fixed {
    table-layout: fixed;
}

th {
    background: #eee;
    color: #333;
    border: 1px solid #d9d9d9;
    font-weight: 600;
    font-size: .9em;
    text-align: left;
    margin: 0;
    padding: 0.55em 1.1em 0.5em;
}

td {
    border-top: 1px solid #ddd;
    border-left: 1px solid #ddd;
    text-align: left;
    margin: 0;
    padding: .8em 1.1em .8em;
    position: relative;
}

.td--vtop {
    vertical-align: top;
    padding-top: 20px;
}

.td--desc {
    padding: 11px 16px 10px 16px;
}

.td--note {
    display: inline-block;
    color: #555;
    font-size: 12.5px;
    font-style: italic;
    margin-top: 4px;
}

.hljs-attr { color: #bd143e; }
.hljs-string { color: #138061; }
.hljs-number { color: #fa755a; }
.hljs-comment { color: #9a9a8e; font-style: italic; }
.hljs-keyword { color: #a71d5d; }
.hljs-literal { color: #008080; }
.hljs-attribute, .hljs-name { color: #000080; font-weight: normal; }
.hljs-built_in { color: #0086b3; }
.hljs-meta { color: #999; font-weight: bold; }

// .hljs-selector-tag, .hljs-subst { color: #333; font-weight: bold; }
//  hljs-section, .hljs-title { color: #900; font-weight: bold; }
// .hljs-subst { font-weight: normal; }
// .hljs-type { color: #458; font-weight: bold; }
// .hljs-link, .hljs-regexp { color: #009926; }
// .hljs-bullet, .hljs-symbol { color: #990073; }
// .hljs-deletion { background: #fdd; }
// .hljs-addition { background: #dfd; }
// .hljs-emphasis { font-style: italic; }
// .hljs-strong { font-weight: bold; }

.table--ul {
    margin: 12px 0 0;
    padding: 0 5px 0 1.2em;

    > li {
        margin: 10px 0;
    }
}

.postman {
    border-radius: 3px;
    position: absolute;
    top: 10px;
    right: 10px;
    height: 25px;
    font: 600 12px / normal 'N', sans-serif;
    padding: 0 7px;
    background: #f4f4f4 linear-gradient(rgba(255, 255, 255, .08), rgba(0, 0, 0, .08));
    border: 1px solid #b5c0cb;
    color: #333;
}

/*
    Synchronization
*/

.mysql, .mssql, .postgresql, .generic {
  display: none;
}

.show--mysql > .mysql, .show--mssql > .mssql, .show--postgresql > .postgresql, .show--generic > .generic {
  display: inline;
}


.sync--pcode1 {
  margin: 24px 0 19px;
}

.sync--pcode2 {
  margin: 25px 0 36px;
}

.fsize15 {
  font-size: 15px;
}

#eg--sync {
    position: absolute;
    z-index: 9;
    top: 10px;
    right: 12px;
}


/*
    Acquiring banks
*/

#modules--magento-2, #modules--woocommerce, #modules--opencart, #modules--prestashop {
  display: none;
}

#magento-2:target ~ #modules--magento-2, #woocommerce:target ~ #modules--woocommerce,
#opencart:target ~ #modules--opencart, #prestashop:target ~ #modules--prestashop {
  display: block;
}

.woo--img1 {
  margin: 10px 0 0;
}

.modules--ol {
  padding: 0 0 0 16px;
}
.modules--ol > li {
  margin: 8px 0;
}

input[type=checkbox].modules--optional {
  display:none;
}

input[type=checkbox].modules--optional:not(:checked) {
  display: none;
}

.picture {
    display: inline-block;
    margin: 13px 0 6px;
    padding: 3px;
    border-radius: 3px;
    border: 1px solid #d0d0d0;
}


/*
    Acquiring banks
*/

.acq--apply {
    width: 70px;
    word-spacing: 2px;
    text-align: center;
}

.acq--name {
    width: 168px;
    height: 66px;
    padding: 0 0 0 15px;
    color: #555;
}

.clearhaus--logo {
    margin-bottom: 2px;
}

.elavon--logo {
    margin-bottom: 10px;
}


/*
    Search
*/

.search--h2 {
    font-size: 18px;
    margin: 15px 0 0;
    padding: 7px 0;
}

#search--ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

